Default to json, fix cents to dollar, update tests
